include/constantine/curves/bn254_snarks.h

typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fr;
typedef struct { secret_word limbs[CTT_WORDS_REQUIRED(254)]; } bn254_snarks_fp;
typedef struct { bn254_snarks_fp c[2]; } bn254_snarks_fp2;
typedef struct { bn254_snarks_fp x, y; } bn254_snarks_g1_aff;
typedef struct { bn254_snarks_fp x, y, z; } bn254_snarks_g1_jac;
typedef struct { bn254_snarks_fp x, y, z; } bn254_snarks_g1_prj;
typedef struct { bn254_snarks_fp2 x, y; } bn254_snarks_g2_aff;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_jac;
typedef struct { bn254_snarks_fp2 x, y, z; } bn254_snarks_g2_prj;
void        ctt_bn254_snarks_g2_jac_double(bn254_snarks_g2_jac* r, const bn254_snarks_g2_jac* P);
void        ctt_bn254_snarks_g2_jac_double_in_place(bn254_snarks_g2_jac* P);
void        ctt_bn254_snarks_g2_jac_affine(bn254_snarks_g2_aff* dst, const bn254_snarks_g2_jac* src);
void        ctt_bn254_snarks_g2_jac_from_affine(bn254_snarks_g2_jac* dst, const bn254_snarks_g2_aff* src);
void        ctt_bn254_snarks_g2_jac_batch_affine(const bn254_snarks_g2_aff dst[], const bn254_snarks_g2_jac src[], size_t n);
void        ctt_bn254_snarks_g2_jac_scalar_mul_big_coef(bn254_snarks_g2_jac* P, const big254* scalar);
void        ctt_bn254_snarks_g2_jac_scalar_mul_fr_coef(bn254_snarks_g2_jac* P, const bn254_snarks_fr* scalar);
void        ctt_bn254_snarks_g2_jac_scalar_mul_big_coef_vartime(bn254_snarks_g2_jac* P, const big254* scalar);
void        ctt_bn254_snarks_g2_jac_scalar_mul_fr_coef_vartime(bn254_snarks_g2_jac* P, const bn254_snarks_fr* scalar);
void        ctt_bn254_snarks_g2_jac_multi_scalar_mul_big_coefs_vartime(bn254_snarks_g2_jac* r, const big254 coefs[], const bn254_snarks_g2_aff points[], size_t len);
void        ctt_bn254_snarks_g2_jac_multi_scalar_mul_fr_coefs_vartime(bn254_snarks_g2_jac* r, const bn254_snarks_fr coefs[], const bn254_snarks_g2_aff points[], size_t len);
secret_bool ctt_bn254_snarks_g2_prj_is_eq(const bn254_snarks_g2_prj* P, const bn254_snarks_g2_prj* Q);
secret_bool ctt_bn254_snarks_g2_prj_is_neutral(const bn254_snarks_g2_prj* P);
void        ctt_bn254_snarks_g2_prj_set_neutral(bn254_snarks_g2_prj* P);
void        ctt_bn254_snarks_g2_prj_ccopy(bn254_snarks_g2_prj* P, const bn254_snarks_g2_prj* Q, secret_bool ctl);
void        ctt_bn254_snarks_g2_prj_neg(bn254_snarks_g2_prj* P, const bn254_snarks_g2_prj* Q);
void        ctt_bn254_snarks_g2_prj_neg_in_place(bn254_snarks_g2_prj* P);
void        ctt_bn254_snarks_g2_prj_cneg_in_place(bn254_snarks_g2_prj* P, secret_bool ctl);
void        ctt_bn254_snarks_g2_prj_sum(bn254_snarks_g2_prj* r, const bn254_snarks_g2_prj* P, const bn254_snarks_g2_prj* Q);
void        ctt_bn254_snarks_g2_prj_add_in_place(bn254_snarks_g2_prj* P, const bn254_snarks_g2_prj* Q);
void        ctt_bn254_snarks_g2_prj_diff(bn254_snarks_g2_prj* r, const bn254_snarks_g2_prj* P, const bn254_snarks_g2_prj* Q);
void        ctt_bn254_snarks_g2_prj_double(bn254_snarks_g2_prj* r, const bn254_snarks_g2_prj* P);
void        ctt_bn254_snarks_g2_prj_double_in_place(bn254_snarks_g2_prj* P);
void        ctt_bn254_snarks_g2_prj_affine(bn254_snarks_g2_aff* dst, const bn254_snarks_g2_prj* src);
void        ctt_bn254_snarks_g2_prj_from_affine(bn254_snarks_g2_prj* dst, const bn254_snarks_g2_aff* src);
void        ctt_bn254_snarks_g2_prj_batch_affine(const bn254_snarks_g2_aff dst[], const bn254_snarks_g2_prj src[], size_t n);
void        ctt_bn254_snarks_g2_prj_scalar_mul_big_coef(bn254_snarks_g2_prj* P, const big254* scalar);
void        ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef(bn254_snarks_g2_prj* P, const bn254_snarks_fr* scalar);
void        ctt_bn254_snarks_g2_prj_scalar_mul_big_coef_vartime(bn254_snarks_g2_prj* P, const big254* scalar);
void        ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef_vartime(bn254_snarks_g2_prj* P, const bn254_snarks_fr* scalar);
void        ctt_bn254_snarks_g2_prj_multi_scalar_mul_big_coefs_vartime(bn254_snarks_g2_prj* r, const big254 coefs[], const bn254_snarks_g2_aff points[], size_t len);
void        ctt_bn254_snarks_g2_prj_multi_scalar_mul_fr_coefs_vartime(bn254_snarks_g2_prj* r, const bn254_snarks_fr coefs[], const bn254_snarks_g2_aff points[], size_t len);