include/constantine_pasta.h

typedef __SIZE_TYPE__    size_t;
typedef __PTRDIFF_TYPE__ ptrdiff_t;
typedef __UINT8_TYPE__   uint8_t;
typedef size_t           secret_word;
typedef size_t           secret_bool;
typedef uint8_t          byte;
typedef struct { secret_word limbs[words_required(255)]; } pallas_fr;
typedef struct { secret_word limbs[words_required(255)]; } pallas_fp;
typedef struct { pallas_fp x, y; } pallas_ec_aff;
typedef struct { pallas_fp x, y, z; } pallas_ec_jac;
typedef struct { pallas_fp x, y, z; } pallas_ec_prj;
void        ctt_pallas_fr_unmarshalBE(pallas_fr* dst, const byte src[], ptrdiff_t src_len);
void        ctt_pallas_fr_marshalBE(byte dst[], ptrdiff_t dst_len, const pallas_fr* src);
secret_bool ctt_pallas_fr_is_eq(const pallas_fr* a, const pallas_fr* b);
secret_bool ctt_pallas_fr_is_zero(const pallas_fr* a);
secret_bool ctt_pallas_fr_is_one(const pallas_fr* a);
secret_bool ctt_pallas_fr_is_minus_one(const pallas_fr* a);
void        ctt_pallas_fr_set_zero(pallas_fr* a);
void        ctt_pallas_fr_set_one(pallas_fr* a);
void        ctt_pallas_fr_set_minus_one(pallas_fr* a);
void        ctt_pallas_fr_neg(pallas_fr* r, const pallas_fr* a);
void        ctt_pallas_fr_neg_in_place(pallas_fr* a);
void        ctt_pallas_fr_sum(pallas_fr* r, const pallas_fr* a, const pallas_fr* b);
void        ctt_pallas_fr_add_in_place(pallas_fr* a, const pallas_fr* b);
void        ctt_pallas_fr_diff(pallas_fr* r, const pallas_fr* a, const pallas_fr* b);
void        ctt_pallas_fr_sub_in_place(pallas_fr* a, const pallas_fr* b);
void        ctt_pallas_fr_double(pallas_fr* r, const pallas_fr* a);
void        ctt_pallas_fr_double_in_place(pallas_fr* a);
void        ctt_pallas_fr_prod(pallas_fr* r, const pallas_fr* a, const pallas_fr* b);
void        ctt_pallas_fr_mul_in_place(pallas_fr* a, const pallas_fr* b);
void        ctt_pallas_fr_square(pallas_fr* r, const pallas_fr* a);