constantine-rust/constantine-sys/src/bindings64.rs

unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_double(
        r: *mut bn254_snarks_g2_jac,
        P: *const bn254_snarks_g2_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_double_in_place(P: *mut bn254_snarks_g2_jac);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_affine(
        dst: *mut bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_jac,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_from_affine(
        dst: *mut bn254_snarks_g2_jac,
        src: *const bn254_snarks_g2_aff,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_batch_affine(
        dst: *const bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_jac,
        n: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_big_coef(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g2_jac,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g2_jac,
        coefs: *const big254,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g2_jac,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_is_eq(
        P: *const bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    ) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_is_neutral(P: *const bn254_snarks_g2_prj) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_set_neutral(P: *mut bn254_snarks_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_ccopy(
        P: *mut bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
        ctl: secret_bool,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_neg(P: *mut bn254_snarks_g2_prj, Q: *const bn254_snarks_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_neg_in_place(P: *mut bn254_snarks_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_cneg_in_place(P: *mut bn254_snarks_g2_prj, ctl: secret_bool);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_sum(
        r: *mut bn254_snarks_g2_prj,
        P: *const bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_add_in_place(
        P: *mut bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_diff(
        r: *mut bn254_snarks_g2_prj,
        P: *const bn254_snarks_g2_prj,
        Q: *const bn254_snarks_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_double(
        r: *mut bn254_snarks_g2_prj,
        P: *const bn254_snarks_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_double_in_place(P: *mut bn254_snarks_g2_prj);
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_affine(
        dst: *mut bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_prj,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_from_affine(
        dst: *mut bn254_snarks_g2_prj,
        src: *const bn254_snarks_g2_aff,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_batch_affine(
        dst: *const bn254_snarks_g2_aff,
        src: *const bn254_snarks_g2_prj,
        n: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_big_coef(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_big_coef_vartime(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const big254,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_scalar_mul_fr_coef_vartime(
        P: *mut bn254_snarks_g2_prj,
        scalar: *const bn254_snarks_fr,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_multi_scalar_mul_big_coefs_vartime(
        r: *mut bn254_snarks_g2_prj,
        coefs: *const big254,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_multi_scalar_mul_fr_coefs_vartime(
        r: *mut bn254_snarks_g2_prj,
        coefs: *const bn254_snarks_fr,
        points: *const bn254_snarks_g2_aff,
        len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_aff_svdw_sha256(
        r: *mut bn254_snarks_g1_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_jac_svdw_sha256(
        r: *mut bn254_snarks_g1_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g1_prj_svdw_sha256(
        r: *mut bn254_snarks_g1_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_aff_svdw_sha256(
        r: *mut bn254_snarks_g2_aff,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_jac_svdw_sha256(
        r: *mut bn254_snarks_g2_jac,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
unsafe extern "C" {
    pub fn ctt_bn254_snarks_g2_prj_svdw_sha256(
        r: *mut bn254_snarks_g2_prj,
        augmentation: *const byte,
        augmentation_len: usize,
        message: *const byte,
        message_len: usize,
        domainSepTag: *const byte,
        domainSepTag_len: usize,
    );
}
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct pallas_fr {
    pub limbs: [secret_word; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of pallas_fr"][::core::mem::size_of::<pallas_fr>() - 32usize];
    ["Alignment of pallas_fr"][::core::mem::align_of::<pallas_fr>() - 8usize];
    ["Offset of field: pallas_fr::limbs"][::core::mem::offset_of!(pallas_fr, limbs) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct pallas_fp {
    pub limbs: [secret_word; 4usize],
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of pallas_fp"][::core::mem::size_of::<pallas_fp>() - 32usize];
    ["Alignment of pallas_fp"][::core::mem::align_of::<pallas_fp>() - 8usize];
    ["Offset of field: pallas_fp::limbs"][::core::mem::offset_of!(pallas_fp, limbs) - 0usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct pallas_ec_aff {
    pub x: pallas_fp,
    pub y: pallas_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of pallas_ec_aff"][::core::mem::size_of::<pallas_ec_aff>() - 64usize];
    ["Alignment of pallas_ec_aff"][::core::mem::align_of::<pallas_ec_aff>() - 8usize];
    ["Offset of field: pallas_ec_aff::x"][::core::mem::offset_of!(pallas_ec_aff, x) - 0usize];
    ["Offset of field: pallas_ec_aff::y"][::core::mem::offset_of!(pallas_ec_aff, y) - 32usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct pallas_ec_jac {
    pub x: pallas_fp,
    pub y: pallas_fp,
    pub z: pallas_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of pallas_ec_jac"][::core::mem::size_of::<pallas_ec_jac>() - 96usize];
    ["Alignment of pallas_ec_jac"][::core::mem::align_of::<pallas_ec_jac>() - 8usize];
    ["Offset of field: pallas_ec_jac::x"][::core::mem::offset_of!(pallas_ec_jac, x) - 0usize];
    ["Offset of field: pallas_ec_jac::y"][::core::mem::offset_of!(pallas_ec_jac, y) - 32usize];
    ["Offset of field: pallas_ec_jac::z"][::core::mem::offset_of!(pallas_ec_jac, z) - 64usize];
};
#[repr(C)]
#[derive(Default, Copy, Clone)]
pub struct pallas_ec_prj {
    pub x: pallas_fp,
    pub y: pallas_fp,
    pub z: pallas_fp,
}
#[allow(clippy::unnecessary_operation, clippy::identity_op)]
const _: () = {
    ["Size of pallas_ec_prj"][::core::mem::size_of::<pallas_ec_prj>() - 96usize];
    ["Alignment of pallas_ec_prj"][::core::mem::align_of::<pallas_ec_prj>() - 8usize];
    ["Offset of field: pallas_ec_prj::x"][::core::mem::offset_of!(pallas_ec_prj, x) - 0usize];
    ["Offset of field: pallas_ec_prj::y"][::core::mem::offset_of!(pallas_ec_prj, y) - 32usize];
    ["Offset of field: pallas_ec_prj::z"][::core::mem::offset_of!(pallas_ec_prj, z) - 64usize];
};
unsafe extern "C" {
    pub fn ctt_big255_from_pallas_fr(dst: *mut big255, src: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_from_big255(dst: *mut pallas_fr, src: *const big255);
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_pallas_fr_unmarshalBE(dst: *mut pallas_fr, src: *const byte, src_len: usize)
        -> bool;
}
unsafe extern "C" {
    #[must_use]
    pub fn ctt_pallas_fr_marshalBE(dst: *mut byte, dst_len: usize, src: *const pallas_fr) -> bool;
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_is_eq(a: *const pallas_fr, b: *const pallas_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_is_zero(a: *const pallas_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_is_one(a: *const pallas_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_is_minus_one(a: *const pallas_fr) -> secret_bool;
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_set_zero(a: *mut pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_set_one(a: *mut pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_set_minus_one(a: *mut pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_neg(r: *mut pallas_fr, a: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_neg_in_place(a: *mut pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_sum(r: *mut pallas_fr, a: *const pallas_fr, b: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_add_in_place(a: *mut pallas_fr, b: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_diff(r: *mut pallas_fr, a: *const pallas_fr, b: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_sub_in_place(a: *mut pallas_fr, b: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_double(r: *mut pallas_fr, a: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_double_in_place(a: *mut pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_prod(r: *mut pallas_fr, a: *const pallas_fr, b: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_mul_in_place(a: *mut pallas_fr, b: *const pallas_fr);
}
unsafe extern "C" {
    pub fn ctt_pallas_fr_square(r: *mut pallas_fr, a: *const pallas_fr);
}
